@@ -39,8 +39,8 @@ JSRC  = com/muscat/om/OmObject.java			\
 	com/muscat/om/OmInvalidArgumentError.java	\
 	com/muscat/om/OmDocNotFoundError.java		\
 	com/muscat/om/OmNetworkError.java		\
-	RunTest.java
-#	BackendManager.java
+	RunTest.java					\
+	BackendManager.java
 
 JCLASSES  = com/muscat/om/OmObject.class			\
 	com/muscat/om/OmReturnObject.class		\
@@ -75,8 +75,8 @@ JCLASSES  = com/muscat/om/OmObject.class			\
 	com/muscat/om/OmInvalidArgumentError.class	\
 	com/muscat/om/OmDocNotFoundError.class		\
 	com/muscat/om/OmNetworkError.class		\
-	RunTest.class
-#	BackendManager.class
+	RunTest.class                                   \
+	BackendManager.class
 
 # where to put the class files
 
