@@ -1,3 +1,7 @@
+Fri Jul 14 18:44:22 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Even closer to BackendManager working in Java.
+
 Fri Jul 14 18:27:25 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Protect dubious tests in internaltest from compilers without
